# paranoid-android

./: .gitignore  Cargo.toml  LICENSE  README.md  crates.js  help.html  search-index.js  settings.html  source-files.js  src-files.js
.github/workflows/: docs.yml  tests.yml
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.Eq.js  trait.PartialEq.js
implementors/core/default/: trait.Default.js
implementors/core/fmt/: trait.Debug.js
implementors/core/marker/: trait.Copy.js  trait.Freeze.js  trait.Send.js  trait.StructuralEq.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js
implementors/core/ops/drop/: trait.Drop.js
implementors/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
implementors/std/io/: trait.Write.js
implementors/tracing_subscriber/fmt/writer/: trait.MakeWriter.js
paranoid_android/: all.html  enum.Buffer.html  fn.init.html  fn.layer.html  fn.with_buffer.html  index.html  sidebar-items.js  struct.AndroidLogMakeWriter.html  struct.AndroidLogWriter.html  type.Layer.html
paranoid_android/layer/: fn.layer.html  fn.with_buffer.html  type.Layer.html
paranoid_android/logging/: enum.Buffer.html
paranoid_android/writer/: struct.AndroidLogMakeWriter.html  struct.AndroidLogWriter.html
search.desc/paranoid_android/: paranoid_android-desc-0-.js
src/: layer.rs  lib.rs  logging.rs  subscriber.rs  writer.rs
src/paranoid_android/: layer.rs.html  lib.rs.html  logging.rs.html  writer.rs.html
src/tracing_android/: layer.rs.html  lib.rs.html  logging.rs.html  writer.rs.html
tracing_android/: all.html  enum.Buffer.html  fn.init.html  fn.layer.html  fn.with_buffer.html  index.html  sidebar-items.js  struct.AndroidLogMakeWriter.html  struct.AndroidLogWriter.html  struct.Layer.html  type.Layer.html  type.Subscriber.html
tracing_android/layer/: fn.layer.html  fn.with_buffer.html  struct.Layer.html  type.Layer.html  type.Subscriber.html
tracing_android/logging/: enum.Buffer.html
tracing_android/writer/: struct.AndroidLogMakeWriter.html  struct.AndroidLogWriter.html
trait.impl/core/clone/: trait.Clone.js
trait.impl/core/cmp/: trait.Eq.js  trait.PartialEq.js
trait.impl/core/default/: trait.Default.js
trait.impl/core/fmt/: trait.Debug.js
trait.impl/core/marker/: trait.Copy.js  trait.Freeze.js  trait.Send.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js
trait.impl/core/ops/drop/: trait.Drop.js
trait.impl/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
trait.impl/std/io/: trait.Write.js
trait.impl/tracing_subscriber/fmt/writer/: trait.MakeWriter.js
type.impl/tracing_subscriber/fmt/fmt_layer/: struct.Layer.js
