[package]
name = "tracing-android"
version = "0.1.0"
authors = ["Raphaël Thériault <self@raftar.io>"]
edition = "2018"
description = "Integration layer between tracing and Android logs"
license = "MIT"
repository = "https://github.com/raftario/tracing-android"

[dependencies]
ndk-sys = "0.2"
sharded-slab = "0.1"
lazy_static = "1"

[dependencies.tracing-core]
version = "0.1"
features = ["std"]
default-features = false
[dependencies.tracing-subscriber]
version = "0.2.19"
features = ["registry", "fmt"]
default-features = false

[features]
default = ["log"]
api-30 = []
json = ["tracing-subscriber/json"]
log = ["tracing-subscriber/tracing-log"]

[package.metadata.docs.rs]
all-features = true
targets = [
    "aarch64-linux-android",
    "armv7-linux-androideabi",
    "i686-linux-android",
    "x86_64-linux-android",
]
rustdoc-args = ["--cfg", "docsrs"]
