[package]
name = "tracing-android"
version = "0.1.0"
authors = ["Raphaël Thériault <self@raftar.io>"]
edition = "2018"
description = "Integration layer between tracing and Android logs"
license = "MIT"
repository = "https://github.com/raftario/tracing-android"

[dependencies]
sharded-slab = "0.1"
lazy_static = "1"
smallvec = "1"
[dependencies.tracing-core]
version = "0.1"
features = ["std"]
default-features = false
[dependencies.tracing-subscriber]
version = "0.3"
features = ["fmt", "smallvec"]
default-features = false

[target.'cfg(target_os = "android")'.dependencies]
ndk-sys = "0.2"

[features]
api-30 = []

[package.metadata.docs.rs]
all-features = true
targets = [
    "aarch64-linux-android",
    "armv7-linux-androideabi",
    "i686-linux-android",
    "x86_64-linux-android",
]
rustdoc-args = ["--cfg", "docsrs"]
