[package]
name = "paranoid-android"
version = "0.1.1"
edition = "2018"
authors = ["Raphaël Thériault <self@raftar.io>"]
description = "Integration layer between tracing and Android logs"
repository = "https://github.com/raftario/tracing-android"
license = "MIT"
keywords = ["android", "logcat", "tracing", "logging", "subscriber"]
categories = [
    "os",
    "development-tools::debugging",
    "development-tools::profiling",
]

[dependencies]
tracing-subscriber = { version = "0.3", features = [
    "fmt",
    "smallvec",
], default-features = false }
tracing-core = { version = "0.1", default-features = false }
sharded-slab = "0.1"
lazy_static = "1"
smallvec = "1"

[target.'cfg(target_os = "android")'.dependencies]
ndk-sys = "0.2"

[features]
api-30 = []

[package.metadata.docs.rs]
all-features = true
targets = [
    "aarch64-linux-android",
    "armv7-linux-androideabi",
    "i686-linux-android",
    "x86_64-linux-android",
]
